--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-concat-css": "^2.2.0",
     "gulp-connect": "^2.2.0",
     "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
@@ -27,6 +28,7 @@
     "gulp-uncss": "^1.0.4",
     "gulp-useref": "^3.0.0",
     "gulp-util": "^3.0.7",
+    "imagemin-pngquant": "^4.2.0",
     "opn": "^3.0.3",
     "wiredep": "^2.2.2"
   }
