--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-router": "^2.0.0-rc5",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3"
+  },
   "devDependencies": {
+    "babel-core": "^6.3.13",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
@@ -30,6 +42,8 @@
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.2.0",
     "opn": "^3.0.3",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "webpack": "^1.12.14",
+    "webpack-stream": "^3.1.0"
   }
 }
