build task bag fixed - es6 support added. webpack is a bullshit and useless here anyway

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.2",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-connect": "^2.2.0",
